# cfn-name-check

./: .gitignore  LICENSE  README.md
.github/workflows/: refresh-limits.yml  release.yml
extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
extension/src/: extension.ts
python/: pyproject.toml
python/cfn_name_check/: __init__.py  cli.py  engine.py  limits_generated.py
tests/: test_engine.py
tests/fixtures/: regression.yml
tools/: generate_limits.py
