[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cfn-name-check"
version = "0.2.1"
description = "Worst-case AWS resource name length checker for CloudFormation templates"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
cfn-name-check = "cfn_name_check.cli:main"

[tool.setuptools.packages.find]
include = ["cfn_name_check*"]
